<?xml version="1.0"?>
<package format="2">
  <name>archlib</name>
  <version>1.0.0</version>
  <description>archlib</description>

  <maintainer email="x@aluno.unb">Ricardo D. Caldas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
