<?xml version="1.0"?>
<package format="2">
  <name>centralhub</name>
  <version>0.0.0</version>
  <description>The Centrahub package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="gabriel@todo.todo">gabriel</maintainer>
  <author email="gabriel@todo.todo">gabriel</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>messages</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
