<?xml version="1.0" ?>
<package format="2">
  <name>diagnostics_analyzer</name>
  <version>1.0.0</version>
  <description>The diagnostics package</description>

  <maintainer email="dev.scouto@gmail.com"> Samuel Couto </maintainer>
  <author email="dev.scouto@gmail.com"> Samuel Couto </author>
  <license> TODO </license>

  <buildtool_depend> catkin </buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>services</build_depend>
  <build_depend>archlib</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>messages</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>services</exec_depend>
  <exec_depend>archlib</exec_depend>

  <export>
  </export>
  
</package>
